master/projects/defaultproject/clusternetworkpolicies/rauto-network-policy-432687086.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: rauto-network-policy-432687086
  project: defaultproject
spec:
  rules:
  - name: rauto-network-rule-432687086
    version: v1.1
  version: v1.1
