master/projects/defaultproject/clusternetworkpolicies/rauto-network-policy-61198.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: rauto-network-policy-61198
  project: defaultproject
spec:
  rules:
  - name: rauto-network-rule-61198
    version: v1.1
  version: v1.1
