master/projects/defaultproject/clusternetworkpolicies/rauto-network-policy-796768283.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: rauto-network-policy-796768283
  project: defaultproject
spec:
  rules:
  - name: rauto-network-rule-796768283
    version: v1.1
  version: v1.1
