master/projects/defaultproject/clusternetworkpolicies/rauto-network-policy-8388.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: rauto-network-policy-8388
  project: defaultproject
spec:
  rules:
  - name: rauto-network-rule-8388
    version: v1.1
  version: v1.1
