master/projects/defaultproject/clusternetworkpolicies/rauto-network-policy-8510.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: rauto-network-policy-8510
  project: defaultproject
spec:
  rules:
  - name: rauto-network-rule-8510
    version: v1.1
  version: v1.1
